tests/ui/async-await/async-closures/pretty-async-fn-opaque.stderr
error[E0308]: mismatched types
  --> $DIR/pretty-async-fn-opaque.rs:8:18
   |
LL | fn produce() -> impl AsyncFnMut() -> &'static str {
   |                 --------------------------------- the found opaque type
...
LL |     let x: i32 = produce();
   |            ---   ^^^^^^^^^ expected `i32`, found opaque type
   |            |
   |            expected due to this
   |
   = note:     expected type `i32`
           found opaque type `impl AsyncFnMut() -> &'static str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
